# pugixml-python

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .yamlfix.toml  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  Pipfile  README.md  _build.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  tests.yml
docs/: .buildinfo  attributes.html  attributes.rst  changelog.html  conf.py  genindex.html  index.html  index.md  install.html  install.md  limits.html  limits.md  objects.inv  py-modindex.html  reference.html  reference.rst  search.html  searchindex.js  summary.html  summary.rst
docs/_sources/: attributes.rst.txt  index.md.txt  install.md.txt  limits.md.txt  reference.md.txt  reference.rst.txt  summary.md.txt  summary.rst.txt
docs/_sources/api/: pugixml.pugi.PrintWriter.rst.txt  pugixml.pugi.StringWriter.rst.txt  pugixml.pugi.XMLAttribute.rst.txt  pugixml.pugi.XMLAttributeIterator.rst.txt  pugixml.pugi.XMLDocument.rst.txt  pugixml.pugi.XMLEncoding.rst.txt  pugixml.pugi.XMLNamedNodeIterator.rst.txt  pugixml.pugi.XMLNode.rst.txt  pugixml.pugi.XMLNodeIterator.rst.txt  pugixml.pugi.XMLNodeType.rst.txt  pugixml.pugi.XMLParseResult.rst.txt  pugixml.pugi.XMLParseStatus.rst.txt  pugixml.pugi.XMLText.rst.txt  pugixml.pugi.XMLTreeWalker.rst.txt  pugixml.pugi.XMLWriter.rst.txt  pugixml.pugi.XPathNode.rst.txt  pugixml.pugi.XPathNodeSet.rst.txt  pugixml.pugi.XPathParseResult.rst.txt  pugixml.pugi.XPathQuery.rst.txt  pugixml.pugi.XPathValueType.rst.txt  pugixml.pugi.XPathVariable.rst.txt  pugixml.pugi.XPathVariableSet.rst.txt
docs/_static/: basic.css  copybutton.js  documentation_options.js  pygments.css
docs/_static/css/: custom.css
docs/_static/scripts/: furo.js.map
docs/_static/styles/: furo.css  furo.css.map
docs/_templates/: class.rst  enum.rst  inner-enum.rst
docs/api/: pugixml.pugi.PrintWriter.html  pugixml.pugi.StringWriter.html  pugixml.pugi.XMLAttribute.html  pugixml.pugi.XMLAttributeIterator.html  pugixml.pugi.XMLDocument.html  pugixml.pugi.XMLEncoding.html  pugixml.pugi.XMLNamedNodeIterator.html  pugixml.pugi.XMLNode.html  pugixml.pugi.XMLNodeIterator.html  pugixml.pugi.XMLNodeType.html  pugixml.pugi.XMLParseResult.html  pugixml.pugi.XMLParseStatus.html  pugixml.pugi.XMLText.html  pugixml.pugi.XMLTreeWalker.html  pugixml.pugi.XMLWriter.html  pugixml.pugi.XPathNode.html  pugixml.pugi.XPathNodeSet.html  pugixml.pugi.XPathParseResult.html  pugixml.pugi.XPathQuery.html  pugixml.pugi.XPathValueType.html  pugixml.pugi.XPathVariable.html  pugixml.pugi.XPathVariableSet.html
src/: .clang-format  CMakeLists.txt  main.cpp
src/pugixml/: __init__.py
tests/: __init__.py  test_attribute.py  test_document.py  test_node.py  test_text.py  test_xpath.py
