[metadata]
name = pugixml
version = 0.6.0.dev1
description = Light-weight, simple and fast XML parser with XPath support
long_description = file: README.md
long_description_content_type = text/markdown
author = Tetsuya Miura
author_email = miute.dev@gmail.com
url = https://github.com/miute/pugixml-python
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Text Processing :: Markup :: XML
license = MIT
keywords =
    dom
    xml
    xpath
    xml-parser

[options]
packages = find:
package_dir =
    = src
include_package_data = True
zip_safe = False
install_requires =
python_requires = >=3.8

[options.packages.find]
where = src

[flake8]
max-line-length = 88
ignore = E203,W503
exclude =
    src/third_party
    .tox
    .git
    __pycache__
    build
    dist
